--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,14 @@ addons:
     - qemu
     - uuid-dev
     - nasm
-    - libisal-dev
+    - iasl
     - python3-distutils
 jobs:
   include:
     - stage: "Build"
       name: "IA32"
-      script: ./edk2/OvmfPkg/build.sh -b RELEASE -n $(nproc) -a IA32 -D HTTP_BOOT_ENABLE qemu
+      script: ./edk2/OvmfPkg/build.sh -n $(nproc) -D HTTP_BOOT_ENABLE -D TLS_ENABLE -b RELEASE -a IA32
     - name: "IA32X64"
-      script: ./edk2/OvmfPkg/build.sh -b RELEASE -n $(nproc) -a IA32 -a X64 -D HTTP_BOOT_ENABLE qemu
+      script: ./edk2/OvmfPkg/build.sh -n $(nproc) -D HTTP_BOOT_ENABLE -D TLS_ENABLE -b RELEASE -a IA32 -a X64
     - name: "X64"
-      script: ./edk2/OvmfPkg/build.sh -b RELEASE -n $(nproc) -a X64 -D HTTP_BOOT_ENABLE qemu
+      script: ./edk2/OvmfPkg/build.sh -n $(nproc) -D HTTP_BOOT_ENABLE -D TLS_ENABLE -b RELEASE -a X64
