--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,17 @@
 dist: xenial
-language: c
+language: python
+python: 3.7
 addons:
+  update: true
   apt:
     packages:
+    - build-essential
     - qemu
     - uuid-dev
     - nasm
     - iasl
-    - python3
-    - python3-dev
-    - python3-setuptools
 git:
+  depth: 1
   submodule: false
 env:
   global:
@@ -22,7 +23,7 @@ jobs:
   include:
     - stage: initialize
       name: "Submodules"
-      script: git submodule update --init --recursive --depth 50
+      script: git submodule update --init --recursive --depth 1
     - stage: compile
       name: "IA32"
       script: cd ./edk2 && ./OvmfPkg/build.sh -n $(nproc) -D HTTP_BOOT_ENABLE -D TLS_ENABLE -b RELEASE -a IA32
